--- a/my-project/about.html
+++ b/my-project/about.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>About</h1>
     <nav>
         <ul>
-            <a href=""><li>Food </li></a>
-            <a href=""><li>Gym </li></a>
-            <a href=""><li>Pictures </li></a>
-            <a href=""><li>About </li></a>
-            <a href=""><li>Contact </li></a>
+            <li><a href="food.html">Food </li></a>
+            <li><a href="index.html">Main</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="pictures.html">Pictures</a></li>
         </ul>
       </nav>
 </body>
